--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "next": "15.3.1"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^19",
-    "@types/react-dom": "^19"
+    "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
   }
 }
